--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -83,6 +83,12 @@ li {
   align-items: center;
 }
 
+.flex-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+  flex-direction: row;
+}
 .green {
     color: green;
     background-color: white;
