--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,6 +8,7 @@
 }
 
 #app {
+    --primary-color: white;
     font-family: Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -16,12 +17,10 @@
     max-width: 100%;
     font-weight: normal;
     overflow-x: hidden;
-    margin: 60px 120px;
+    
 }
 
 body {
-    color: var(--color-text);
-    background: var(--color-background);
     transition: color 0.5s, background-color 0.5s;
     line-height: 1.6;
     font-family: Inter, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
@@ -58,6 +57,9 @@ li {
 .margin-l {
     margin-left: 15px;
 }
+.margin-t {
+    margin-top: 15px;
+}
 
 .pagb {
     padding-bottom: 20px;
@@ -91,5 +93,15 @@ li {
 }
 .green {
     color: green;
+}
+
+.light-theme {
     background-color: white;
+    color: black;
+}
+
+.dark-theme {
+    background-color: rgb(89, 84, 84, 0.2);
+    color: white;
+    
 }
